--- a/path.html
+++ b/path.html
@@ -8,11 +8,11 @@
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
     </head>
     <body>
-        <div id='main-area'></div>
+        <div id='graph-area'></div>
         <script>
          const child = document.createElement('div');
          child.style = 'width: 800px; height: 600px; border: solid 1px silver;';
-         document.querySelector('#main-area').appendChild(child);
+         document.querySelector('#graph-area').appendChild(child);
          let blitzboard = new Blitzboard(child);
          fetch('https://raw.githubusercontent.com/togodx/togodx-path/main/path/graph.pg').then(res => {
              return res.text();
