--- a/path.html
+++ b/path.html
@@ -8,6 +8,8 @@
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
     </head>
     <body>
+        ID links between 20 datasets from 8 categories used in TogoDX.
+        <br><br>
         <div id='graph-area'></div>
         <script>
          const child = document.createElement('div');
