Add a link for a path.tsv

--- a/path.html
+++ b/path.html
@@ -9,6 +9,7 @@
     </head>
     <body>
         ID links between 21 datasets from 8 categories used in TogoDX/Human.
+        A list of "display_label" is [here](https://github.com/togodx/togodx-path/blob/main/path.tsv). 
         <br><br>
         <div id='graph-area'></div>
         <script>
