--- a/path.html
+++ b/path.html
@@ -8,8 +8,7 @@
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
     </head>
     <body>
-        ID links between 21 datasets from 8 categories used in TogoDX/Human.
-        A list of "display_label" is [here](https://github.com/togodx/togodx-path/blob/main/path.tsv). 
+    <h1>ID links between 21 datasets from 8 categories used in TogoDX/Human.</h1>
         <br><br>
         <div id='graph-area'></div>
         <script>
@@ -34,5 +33,7 @@
              blitzboard.network.stabilize();
          });
         </script>
+    <div>A list of "display_label" is <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv" rel="noopener">here</a>. </div>
+
     </body>
 </html>
