--- a/path-simple.html
+++ b/path-simple.html
@@ -8,7 +8,7 @@
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
     </head>
     <body>
-        ID links between 21 datasets from 8 categories used in TogoDX/Human.
+        ID links between 21 datasets from 8 categories used in TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">here</a> for the list of 51 links)
         <br><br>
         <div id='graph-area'></div>
         <script>
