--- a/path.html
+++ b/path.html
@@ -8,7 +8,7 @@
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
     </head>
     <body>
-        ID links between datasets from 8 categories covered by TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">table</a> for the meaning of links)
+        ID links between datasets from 8 categories covered by TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">table</a> for the meaning of relations)
         <p><a href="https://togodx.github.io/togodx-path/path-simple.html">hide labels</a></p>
         <div id='graph-area' style='width: 800px; height: 600px; border: solid 1px silver;'></div>
         <script>
