--- a/path.html
+++ b/path.html
@@ -6,10 +6,13 @@
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/blitzboard.js'></script>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/vis-network.min.js'></script>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
+        <link href='./css/style.css' rel='stylesheet'>
     </head>
     <body>
-        ID links between datasets from 8 categories covered by TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">table</a> for the meaning of relations)
-        <p><a href="https://togodx.github.io/togodx-path/path-simple.html">hide labels</a></p>
+        ID links between datasets from 8 categories covered by TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">here</a> for the list of links)
+        <table width="800">
+            <tr><td align="right"><button type="button" class="rounded-button" onclick="location.href='https://togodx.github.io/togodx-path/path-simple.html'">Hide Labels</button></td></tr>
+        </table>
         <div id='graph-area' style='width: 800px; height: 600px; border: solid 1px silver;'></div>
         <script>
          let blitzboard = new Blitzboard(document.getElementById('graph-area'));
