Modify words in path-simple.html path.html

--- a/path-simple.html
+++ b/path-simple.html
@@ -9,7 +9,7 @@
         <link href='./css/style.css' rel='stylesheet'>
     </head>
     <body>
-        ID links between datasets from 8 categories covered by TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">here</a> for the list of links)
+        ID links between datasets from 8 categories covered by TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">here</a> for the list of relations)
         <table width="800">
             <tr><td align="right"><button type="button" class="rounded-button" onclick="location.href='https://togodx.github.io/togodx-path/path.html'">Display Labels</button></td></tr>
         </table>
