Update table in path-simple.html path.html

--- a/path.html
+++ b/path.html
@@ -9,8 +9,8 @@
         <link href='./css/style.css' rel='stylesheet'>
     </head>
     <body>
-        ID links between datasets from 8 categories covered by TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">here</a> for the list of relations)
         <table width="800">
+            <tr><td>ID links between datasets from 8 categories covered by TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">here</a> for the list of links)</td></tr>
             <tr><td align="right"><button type="button" class="rounded-button" onclick="location.href='https://togodx.github.io/togodx-path/path-simple.html'">Hide Labels</button></td></tr>
         </table>
         <div id='graph-area' style='width: 800px; height: 600px; border: solid 1px silver;'></div>
