--- a/path-simple.html
+++ b/path-simple.html
@@ -13,9 +13,11 @@
             <tr><td>ID links between datasets from 8 categories covered by TogoDX/Human (see <a href="https://github.com/togodx/togodx-path/blob/main/path.tsv">here</a> for the list of links)</td></tr>
             <tr><td align="right"><button type="button" class="rounded-button" onclick="location.href='https://togodx.github.io/togodx-path/path.html'">Display Labels</button></td></tr>
         </table>
-        <div id='graph-area' style='width: 800px; height: 600px; border: solid 1px silver;'></div>
+        <div id='graph-area' style='width: 800px; height: 600px; border: solid 1px silver;'>
+            <div id='child-area' style='width: 800px; height: 600px;'></div>
+        </div>
         <script>
-         let blitzboard = new Blitzboard(document.getElementById('graph-area'));
+         let blitzboard = new Blitzboard(document.getElementById('child-area'));
          let graph, config;
          const graphPromise = fetch('https://raw.githubusercontent.com/togodx/togodx-path/main/path/graph.pg').then(res => {
              return res.text();
