--- a/path-highlight.html
+++ b/path-highlight.html
@@ -6,6 +6,7 @@
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/blitzboard.js'></script>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/vis-network.min.js'></script>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
         <link href='./css/style.css' rel='stylesheet'>
     </head>
     <body>
@@ -17,6 +18,10 @@
             <div id='child-area' style='width: 800px; height: 600px;'></div>
         </div>
         <script>
+         let pathList = null;
+         $.getJSON('https://raw.githubusercontent.com/togodx/togodx-path/main/graph/path.json', (data) => {
+             pathList = data;
+         });
          const blitzboard = new Blitzboard(document.getElementById('child-area'));
          let graph, config;
          const graphPromise = fetch('https://raw.githubusercontent.com/togodx/togodx-path/main/graph/path-selected.pg').then(res => {
@@ -24,7 +29,7 @@
          }).then(text => {
              graph = text;
          });
-         const configPromise = fetch('https://raw.githubusercontent.com/togodx/togodx-path/main/graph/config.js').then(res => {
+         const configPromise = fetch('./graph/config-highlight.js').then(res => {
              return res.text();
          }).then(text => {
              config = text;
