--- a/path-selected-label.html
+++ b/path-selected-label.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset='utf-8'>
         <title>Togo-DX/Human path</title>
-        <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@8002b30/blitzboard.js'></script>
+        <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@v1.0.1/blitzboard.js'></script>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/vis-network.min.js'></script>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
         <link href='./css/style.css' rel='stylesheet'>
