--- a/path-highlight.html
+++ b/path-highlight.html
@@ -4,8 +4,8 @@
         <meta charset='utf-8'>
         <title>Togo-DX/Human path</title>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/blitzboard.js'></script>
-        <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/vis-network.min.js'></script>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
+        <script src='https://unpkg.com/vis-network/standalone/umd/vis-network.min.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js'></script>
         <link href='./css/style.css' rel='stylesheet'>
     </head>
