--- a/path-highlight.html
+++ b/path-highlight.html
@@ -22,14 +22,14 @@
             <tr><td align="center" style="font-size: 0.8em"><b>Click</b> on <i>source node</i>, and <b>hover</b> on <i>target node</i></td></tr>
             <tr><td><table width="800" style="font-size: 0.9em"><tr>
                 <td width="300"></td>
-                <td align="left" width="70"><div id='path-source-node'></div></td>
+                <td width="70" id='path-source-node'></td>
                 <td width="10"></td>
-                <td id="path-arrow" width="60" align="left"></td>
-                <td align="left"><div id='path-target-node'></div></td>
+                <td width="60" id="path-arrow"></td>
+                <td id='path-target-node'></td>
             </tr></table></td></tr>
-            <tr><td><table width="800" style="font-size: 0.9em"><tr>
+            <tr><td><table width="800" style="font-size: 0.8em"><tr>
                 <td width="300"></td>
-                <td id="path-node-list" style="font-size: 0.8em"></td>
+                <td id="path-node-list"></td>
             </tr></table></td></tr>
         </table>
         <script>
