--- a/path-highlight.html
+++ b/path-highlight.html
@@ -28,7 +28,7 @@
                 <td id='path-target-node'></td>
             </tr></table></td></tr>
             <tr><td><table width="800"><tr>
-                <td width="300" id="path-title" valign="top" align="right" style="font-size: 0.9em"></td>
+                <td width="300" id="path-title" valign="top" align="right" style="font-size: 0.8em" hidden><b>Path:</b></td>
                 <td id="path-node-list" style="font-size: 0.8em"></td>
             </tr></table></td></tr>
         </table>
@@ -66,7 +66,7 @@
                  pathSourceNode.textContent = '';
                  pathTargetNode.textContent = '';
                  pathArrow.textContent = '';
-                 pathTitle.textContent = '';
+                 pathTitle.hidden = true;
                  while (pathNodeList.firstChild) {
                      pathNodeList.removeChild(pathNodeList.firstChild);
                  }
