--- a/path-highlight.html
+++ b/path-highlight.html
@@ -19,12 +19,12 @@
                     <div id='child-area' style='width: 800px; height: 600px;'></div>
                 </div>
             </td></tr>
-            <tr><td align="center" style="font-size: 0.8em"><b>Click</b> on <i>source node</i>, and <b>hover</b> on <i>target node</i></td></tr>
+            <tr><td align="center" style="font-size: 0.8em"><b>Click</b> on <i>source node</i>, and <b>mouse over</b> <i>target node</i></td></tr>
             <tr><td><table width="800" style="font-size: 0.9em"><tr>
                 <td width="300"></td>
-                <td width="70" id='path-source-node'></td>
+                <td width="80" id='path-source-node'></td>
                 <td width="10"></td>
-                <td width="60" id="path-arrow"></td>
+                <td width="70" id="path-arrow"></td>
                 <td id='path-target-node'></td>
             </tr></table></td></tr>
             <tr><td><table width="800"><tr>
