Refactor path-highlight-label.html path-highlight.html

--- a/path-highlight-label.html
+++ b/path-highlight-label.html
@@ -14,11 +14,11 @@
         <table width="800">
             <tr><td>ID links between datasets from 8 categories shown in different colors. Larger circles represent the target datasets of TogoDX/Human. See <a href="https://github.com/togodx/togodx-path/blob/main/graph/path-selected.tsv">here</a> for the list of links.</td></tr>
             <tr><td align="right"><button type="button" class="rounded-button" onclick="location.href='https://togodx.github.io/togodx-path/path-highlight.html'">Hide Labels</button></td></tr>
-            <tr><td>
-                <div id='graph-area' style='width: 800px; height: 600px; border: solid 1px silver;'>
-                    <div id='child-area' style='width: 800px; height: 600px;'></div>
-                </div>
-            </td></tr>
+        </table>
+        <div id='graph-area' style='width: 800px; height: 600px; border: solid 1px silver;'>
+            <div id='child-area' style='width: 800px; height: 600px;'></div>
+        </div>
+        <table width="800">
             <tr><td align="center" style="font-size: 0.8em"><b>Click</b> on <i>source node</i>, and <b>mouse over</b> <i>target node</i></td></tr>
             <tr><td><table width="800" style="font-size: 0.9em"><tr>
                 <td width="300"></td>
