--- a/path-highlight.html
+++ b/path-highlight.html
@@ -19,24 +19,14 @@
             <div id='child-area' style='width: 800px; height: 600px;'></div>
         </div>
         <table width="800">
-            <tr><td align="center" style="font-size: 0.8em"><b>Click</b> on <i>source node</i>, and <b>mouse over</b> <i>target node</i></td></tr>
-            <tr><td><table width="800" style="font-size: 0.9em"><tr>
-                <td width="300"></td>
-                <td width="80" id='path-source-node'></td>
-                <td width="10"></td>
-                <td width="70" id="path-arrow"></td>
-                <td id='path-target-node'></td>
-            </tr></table></td></tr>
+            <tr><td style="font-size: 0.9em">To see ID conversion paths, <b>click</b> on a target dataset and then <b>mouseover</b> the other ones.</td></tr>
             <tr><td><table width="800"><tr>
-                <td width="300" id="path-title" valign="top" align="right" style="font-size: 0.8em" hidden><b>Path:</b></td>
-                <td id="path-node-list" style="font-size: 0.8em"></td>
+                <td width="50" id="path-title" valign="top" style="font-size: 0.9em" hidden><b>Path:</b></td>
+                <td id="path-node-list" style="font-size: 0.9em"></td>
             </tr></table></td></tr>
         </table>
         <script>
-         const pathSourceNode = document.getElementById('path-source-node');
-         const pathTargetNode = document.getElementById('path-target-node');
          const pathNodeList = document.getElementById('path-node-list');
-         const pathArrow = document.getElementById('path-arrow');
          const pathTitle = document.getElementById('path-title');
          let pathList = null;
          fetch('./graph/path.json').then(res => {
@@ -63,9 +53,6 @@
              blitzboard.network.on('click', (params) => {
                  blitzboard.pathSrc = null;
                  blitzboard.network.unselectAll();
-                 pathSourceNode.textContent = '';
-                 pathTargetNode.textContent = '';
-                 pathArrow.textContent = '';
                  pathTitle.hidden = true;
                  while (pathNodeList.firstChild) {
                      pathNodeList.removeChild(pathNodeList.firstChild);
