--- a/path-highlight.html
+++ b/path-highlight.html
@@ -19,10 +19,9 @@
             <div id='child-area' style='width: 800px; height: 600px;'></div>
         </div>
         <table width="800">
-            <tr><td style="font-size: 0.9em">To see ID conversion paths, <b>click</b> on a target dataset and then <b>mouseover</b> the other ones.</td></tr>
             <tr><td><table width="800"><tr>
-                <td width="50" id="path-title" valign="top" style="font-size: 0.9em" hidden><b>Path:</b></td>
-                <td id="path-node-list" style="font-size: 0.9em"></td>
+                <td width="50" id="path-title" valign="top" style="font-size: 0.9em"><b>Path:</b></td>
+                <td id="path-node-list" style="font-size: 0.9em">(click on a target dataset)</td>
             </tr></table></td></tr>
         </table>
         <script>
@@ -53,10 +52,7 @@
              blitzboard.network.on('click', (params) => {
                  blitzboard.pathSrc = null;
                  blitzboard.network.unselectAll();
-                 pathTitle.hidden = true;
-                 while (pathNodeList.firstChild) {
-                     pathNodeList.removeChild(pathNodeList.firstChild);
-                 }
+                 pathNodeList.textContent = '(click on a target dataset)';
              });
          });
         </script>
