--- a/path-highlight-label.html
+++ b/path-highlight-label.html
@@ -20,13 +20,12 @@
         </div>
         <table width="800">
             <tr><td><table width="800"><tr>
-                <td width="50" id="path-title" align="center" valign="top" style="font-size: 0.9em"><b>Path:</b></td>
+                <td width="50" align="center" valign="top" style="font-size: 0.9em"><b>Path:</b></td>
                 <td id="path-node-list" style="font-size: 0.9em">(click on a target dataset)</td>
             </tr></table></td></tr>
         </table>
         <script>
          const pathNodeList = document.getElementById('path-node-list');
-         const pathTitle = document.getElementById('path-title');
          let pathList = null;
          fetch('./graph/path.json').then(res => {
              return res.json();
