--- a/path-highlight.html
+++ b/path-highlight.html
@@ -5,9 +5,7 @@
         <title>Togo-DX/Human path</title>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@5710ae4/blitzboard.js'></script>
         <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/lib/pg_parser_browserified.js' type='text/javascript'></script>
-        <!-- <script src='https://unpkg.com/vis-network/standalone/umd/vis-network.min.js'></script> -->
-        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vis-network/9.1.2/standalone/umd/vis-network.min.js" integrity="sha512-DOpf3tO7m7MJHkMMRRoNxiJL4CR+TFLYy2XnIOeTh26Hz8j8i9RHrVkXzh+AQ7mffzIFk538/zcQ3Yoo+7VISA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-        <script src='https://cdn.jsdelivr.net/gh/blitzboard/blitzboard@master/vis-network.min.js'></script>
+        <script src='https://cdnjs.cloudflare.com/ajax/libs/vis-network/9.0.4/standalone/umd/vis-network.min.js'></script>
         <link href='./css/style.css' rel='stylesheet'>
     </head>
     <body>
