Update path-highlight-count.html to read pathCountStartEnd

--- a/path-highlight-count.html
+++ b/path-highlight-count.html
@@ -36,6 +36,12 @@
          }).then(json => {
              pathCount = json;
          });
+         let pathCountStartEnd = null;
+         fetch('./graph/path-count-uniq-start-end.json').then(res => {
+             return res.json();
+         }).then(json => {
+             pathCountStartEnd = json;
+         });
          let datasetCount = null;
          fetch('./graph/dataset-count.json').then(res => {
              return res.json();
