--- a/path-attr.html
+++ b/path-attr.html
@@ -29,7 +29,7 @@
         <script>
          const pathNodeList = document.getElementById('path-node-list');
          let pathList = null;
-         fetch('./graph/path.json').then(res => {
+         fetch('./json/path.json').then(res => {
              return res.json();
          }).then(json => {
              pathList = json;
