Rename to json/paths-count.json

--- a/path-count.html
+++ b/path-count.html
@@ -31,7 +31,7 @@
              pathList = json;
          });
          let pathCount = null;
-         fetch('./json/path-count.json').then(res => {
+         fetch('./json/paths-count.json').then(res => {
              return res.json();
          }).then(json => {
              pathCount = json;
