Rename to json/dataset-count-ids.json

--- a/path-count.html
+++ b/path-count.html
@@ -43,7 +43,7 @@
              pathCountStartEnd = json;
          });
          let datasetCount = null;
-         fetch('./json/dataset-count.json').then(res => {
+         fetch('./json/dataset-count-ids.json').then(res => {
              return res.json();
          }).then(json => {
              datasetCount = json;
