Update message in path-attr.html

--- a/path-attr-label.html
+++ b/path-attr-label.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <table width="1000">
-            <tr><td>Relations between IDs and attributes, from 8 categories shown in different colors.
+            <tr><td>ID links between datasets and attributes of 8 categories shown in different colors.
                 Larger circles represent the target datasets, and the stars represent attributes in TogoDX/Human.
-                See <a href="https://github.com/togodx/togodx-path/blob/main/tsv/dataset-links.tsv">here</a> for the ID relations,
-                and also <a href="https://github.com/togodx/togodx-path/blob/main/tsv/attribute-count-ids.tsv">here</a> for the attributes.
+                See <a href="https://github.com/togodx/togodx-path/blob/main/tsv/dataset-links.tsv">here</a> for the list of ID links,
+                and <a href="https://github.com/togodx/togodx-path/blob/main/tsv/attribute-count-ids.tsv">here</a> for the list of attributes.
             </td></tr>
             <tr><td align="right"><button type="button" class="rounded-button" onclick="location.href='path-attr.html'">Hide Labels</button></td></tr>
         </table>
