Rename to json/id-pairs-count.json

--- a/path-count.html
+++ b/path-count.html
@@ -31,7 +31,7 @@
              pathList = json;
          });
          let pathCountStartEnd = null;
-         fetch('./json/count-path-start-end.json').then(res => {
+         fetch('./json/id-pairs-count.json').then(res => {
              return res.json();
          }).then(json => {
              pathCountStartEnd = json;
